--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-results/
+# Ignore results/ contents by default but allow whitelisting specific subfolders
+results/*
 data/
 __pycache__/
 **/__pycache__/
@@ -7,3 +8,11 @@ __pycache__/
 .env
 .DS_Store
 *.old
+
+# Whitelist a generated results directory so it can be committed
+!results/drupal-gemma34b-12-17-2025/
+!results/drupal-gemma34b-12-17-2025/**
+
+# Example: to allow another generated run, add:
+# !results/<your-folder>/
+# !results/<your-folder>/**
