--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ GEMINI_API_KEY=your_api_key_here
 # Create at: https://github.com/settings/tokens
 # Required scopes: public_repo (or repo for private repos)
 GITHUB_TOKEN=your_github_token_here
+
+# Default model for Ollama
+OLLAMA_DEFAULT_MODEL=gpt-oss:20b
